# us-tax-brackets

./: Cargo.toml  LICENSE  README.md
.github/workflows/: python.yml  rust.yml
data/2023/: tax_computation_worksheet.csv  tax_table.csv
data/2024/: tax_computation_worksheet.csv  tax_table.csv
data/2025/: tax_computation_worksheet.csv  tax_table.csv
scraper/: common.py  html_scraper.py  pdf_scraper.py  scrape.py  scrape_pdf.py
src/: compute.rs  data.rs  lib.rs  types.rs
